--- a/style.css
+++ b/style.css
@@ -35,6 +35,14 @@ Font Load
 }
 
 @font-face {
+  font-family: "itc-demi";
+  src: url("assets/fonts/itc-demi.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: "itc-bd";
   src: url("assets/fonts/itc-bold.otf") format("opentype");
   font-weight: 800;
@@ -74,12 +82,12 @@ body {
   overflow-x: clip;
 }
 
-.content {
-  color: var(--light-color);
-}
-
 span.different {
   color: var(--primary-color);
+}
+
+.content {
+  color: var(--light-color);
 }
 
 p {
@@ -136,6 +144,14 @@ h1 {
   font-weight: 800;
 }
 
+h2 {
+  font-size: 70px;
+  line-height: 80px;
+  font-family: itc-demi;
+  font-weight: 600;
+  color: var(--light-color);
+}
+
 h4 {
   font-size: 35px;
   line-height: 45px;
@@ -177,6 +193,7 @@ header {
   background: url(assets/images/banner-bg.webp);
   padding-top: 40px;
   padding-bottom: 80px;
+  background-position: top center;
 }
 
 .hero-section h1 {
@@ -185,7 +202,7 @@ header {
 }
 
 .hero-section .astronut {
-  width: 75%;
+  width: 95%;
 }
 
 .hero-section .col-lft {
@@ -294,3 +311,299 @@ a.btn.btn-secondary svg {
   font-weight: 100;
   -webkit-text-stroke: 1px #ffffff1a;
 }
+
+.hero-section .col-md-6 {
+  position: relative;
+}
+
+.hero-section .ring-btn {
+  position: absolute;
+  bottom: 38%;
+  left: 150px;
+  animation: rotate 8s linear infinite;
+}
+
+@keyframes rotate {
+	0% {
+    transform: rotate(0deg);
+}
+100% {
+    transform: rotate(360deg);
+}
+}	
+
+.hero-section .ring-btn a {
+  padding: 22px 25px;
+  border: 1px solid;
+  color: var(--light-color);
+  border-radius: 100%;
+  position: relative;
+  filter: drop-shadow(0px 0px 5px white);
+}
+
+.hero-section .ring-btn a:before {
+  content: '';
+  position: absolute;
+  background: url(assets/images/ring-button.png);
+  width: 150%;
+  height: 150%;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  outline: 2px solid var(--light-color);
+  border-radius: 100px;
+  outline-offset: 5px;
+}
+
+.about-section {
+  background: url(assets/images/about-bg.webp);
+  padding-top: 200px;
+  padding-bottom: 250px;
+  background-position: top center;
+}
+
+.about-section .buttons {
+  float: right;
+  margin-top: 30px;
+}
+
+h5.dot {
+  position: relative;
+  padding-left: 25px;
+  margin-bottom: 20px;
+}
+
+h5.dot:before {
+  content: '';
+  position: absolute;
+  background: var(--primary-color);
+  width: 10px;
+  height: 10px;
+  border-radius: 40px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  filter: drop-shadow(0px 0px 5px var(--primary-color));
+}
+
+.service-section {
+  background: url(assets/images/service-bg.webp);
+  padding-top: 150px;
+  padding-bottom: 150px;
+  padding-inline: 50px;
+  background-position: center center;
+  position: relative;
+}
+
+.service-list {
+  list-style: none;
+  padding: 0;
+  margin-block: 60px;
+}
+
+.service-list li {
+  cursor: pointer;
+  padding: 15px 0;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 0.3s ease;
+  font-size: 35px;
+  line-height: 45px;
+  font-family: 'itc-demi';
+  border-bottom: 1px solid #ffffff2b;
+  margin-block: 18px;
+  position: relative;
+}
+
+.service-list li small {
+  font-size: 17px;
+  font-weight: 400;
+  position: absolute;
+  top: 5px;
+  margin-left: 6px;
+  font-family: 'itc-med';
+}
+
+.service-list li.active {
+  color: white;
+  font-weight: bold;
+}
+
+.service-content {
+  display: none;
+}
+
+.service-content.active {
+  display: block;
+}
+
+.sub-service-list {
+  display: flex;
+  gap: 20px;
+  margin-top: 80px;
+  position: absolute;
+  flex-direction: column;
+  margin-left: 60px;
+}
+
+.sub-service-list button {
+  background: none;
+  border: none;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  text-align: left;
+  font-size: 32px;
+  line-height: 42px;
+  font-family: 'itc-demi';
+}
+
+.sub-service-list button.active {
+  color: white;
+  font-weight: bold;
+}
+
+.service-image img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.service-section .row {
+  background: url(assets/images/services-inner-bg.png);
+  align-items: center;
+  background-repeat: no-repeat;
+  padding: 50px 40px;
+  background-size: cover;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.service-section .content h1 {
+  text-transform: uppercase;
+  font-size: 400px;
+  text-align: center;
+  line-height: 0px;
+  font-family: 'bebas';
+  white-space: nowrap;
+  color: transparent;
+  -webkit-text-stroke: 1px #ffffff2e;
+  font-weight: 100;
+}
+
+.service-section .col-md-5.left-column {
+  padding-inline: 40px 80px;
+}
+
+.cta-section {
+  position: relative;
+  background: url(assets/images/cta-bg.webp);
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.cta-section .marquee-container {
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-block: 80px 100px;
+  position: absolute;
+  top: 0;
+}
+
+.cta-section .marquee-wrapper {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+}
+.cta-section .marquee {
+  display: flex;
+  font-size: 40px;
+  font-weight: bold;
+  gap: 50px;
+  min-width: 200%;
+}
+.cta-section .marquee span {
+  display: inline-block;
+  padding: 0 20px;
+}
+
+.cta-section .marquee {
+  font-size: 120px;
+  line-height: 100px;
+  font-family: 'itc-bd';
+  font-weight: 800;
+}
+
+.cta-section .marquee span {
+  color: transparent;
+  -webkit-text-stroke: 1px #ffffff59;
+  transition: 0.6s;
+}
+
+.cta-section .marquee span:hover {
+  color: var(--light-color);
+  transition: 0.6s;
+}
+
+.cta-section .astronut {
+  position: relative;
+  z-index: 99;
+  pointer-events: none;
+  right: -70px;
+  width: 67%;
+  top: 30px;
+  animation: glowEffect 6s infinite alternate;
+}
+
+@keyframes glowEffect {
+  0%, 100% {
+      filter: drop-shadow(2px 4px 50px var(--primary-color));
+  }
+  50% {
+      filter: drop-shadow(2px 4px 120px var(--primary-color));
+  }
+}
+
+.cta-section .talk-btn {
+  left: 100px;
+  position: relative;
+  z-index: 99;
+  width: 40%;
+  top: 50px;
+}
+
+.cta-section .col-md-6 {
+  position: relative;
+}
+
+.cta-section .col-left:before {
+  content: '';
+  position: absolute;
+  background: url(assets/images/right-shadow.png);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0px;
+  bottom: 0;
+  margin: auto;
+  display: table;
+  animation: scale 10s linear infinite;
+  background-size: 100% 100%;
+  transform-origin: left;
+}
+
+@keyframes scale {
+	0%, 100% {
+    transform: scale(1);
+}
+50% {
+    transform: scale(0.6);
+}
+}	
