--- a/style.css
+++ b/style.css
@@ -1020,3 +1020,191 @@ h5.dot:before {
 .get-section .col-md-6.col-left .content {
   margin-bottom: 30px;
 }
+
+.faq-item {
+  margin-bottom: 10px;
+}
+
+.faq-question {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  background: #00000059;
+  color: white;
+  font-size: 16px;
+  text-align: left;
+  cursor: pointer;
+  border-radius: 40px;
+  transition: 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  padding-inline: 20px;
+  border: 1px solid #ffffff66;
+  font-family: "itc-bk";
+  margin-bottom: 18px;
+}
+
+.faq-section .icon {
+  font-size: 18px;
+  font-weight: bold;
+  transition: 0.3s;
+  position: absolute;
+  right: 15px;
+  top: 8px;
+}
+
+.faq-answer {
+  display: none;
+  padding: 10px;
+  background: #e9ecef;
+  border-radius: 10px;
+  color: black;
+  padding-inline: 17px;
+}
+
+.faq-section {
+  position: relative;
+  background: url(assets/images/fag-bg.webp);
+  background-position: right;
+  background-repeat: no-repeat;
+  padding-block: 200px;
+}
+
+.faq-section a.btn.btn-secondary {
+  float: right;
+  margin-bottom: 25px;
+}
+
+/*------Footer Css Start-----------*/
+
+footer {
+  background-image: url(assets/images/footer-bg.jpg);
+  color: white;
+  padding: 50px 0 20px;
+  position: relative;
+}
+
+footer:before {
+  content: "";
+  position: absolute;
+  border-bottom: 4px solid var(--primary-color);
+  width: 43%;
+  top: 0;
+  left: 0;
+}
+
+footer:after {
+  content: "";
+  position: absolute;
+  border-bottom: 4px solid var(--primary-color);
+  width: 43%;
+  top: 0;
+  right: 0;
+}
+
+footer .footer-content {
+  position: relative;
+  z-index: 2;
+}
+
+footer .footer-logo {
+  text-align: center;
+  padding-bottom: 120px;
+  margin-top: -150px;
+}
+
+footer .footer-logo img {
+  width: 100px;
+}
+
+footer .astronaut-img {
+  max-height: 350px;
+  position: relative;
+}
+
+footer h4 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-family: "itc-demi";
+}
+
+footer .footer-links {
+  list-style: none;
+  padding-left: 0;
+}
+
+footer .footer-links li {
+  margin-bottom: 10px;
+}
+
+footer .footer-links a {
+  color: #ccc;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+footer .footer-links a:hover {
+  color: #fff;
+  padding-left: 5px;
+}
+
+footer .address {
+  margin-top: 30px;
+}
+
+footer .payment-methods {
+  text-align: right;
+  margin-top: 20px;
+}
+
+footer .payment-methods img {
+  height: 30px;
+  margin-left: 10px;
+}
+
+footer .copyright {
+  margin-top: 30px;
+  padding-top: 20px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+footer .earth-img {
+  position: absolute;
+  right: -400px;
+  bottom: -200px;
+  max-width: 600px;
+  opacity: 0.8;
+  z-index: 1;
+  animation: rotate 50s linear infinite;
+}
+
+footer .astronaut-img {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  z-index: 1;
+  transform: scale(1.5);
+  transform-origin: bottom;
+  filter: drop-shadow(3px -2px 0px var(--primary-color));
+}
+
+.copyright .col-12 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.copyright p,
+.copyright .payment-methods {
+  margin: unset;
+}
+
+footer .row.menu-col,
+footer .copyright {
+  padding-left: 200px;
+}
+
+/*------Footer Css End-----------*/
