--- a/style.css
+++ b/style.css
@@ -189,11 +189,26 @@ h5 {
   width: 55px;
 }
 
-header {
+/* header {
   position: absolute;
   width: 100%;
   top: 0;
   z-index: 9999;
+} */
+
+.custom-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+  background: transparent;
+  transition: all 0.4s ease;
+}
+
+.custom-header .container {
+  margin: 0 auto;
+  transition: all 0.4s ease;
+  box-sizing: border-box;
 }
 
 .hero-section {
@@ -239,10 +254,15 @@ a.btn {
   color: white;
   font-size: 16px;
   line-height: 26px;
+  position: relative;
+  padding: 14px 20px;
+  letter-spacing: 1px;
+  border: unset;
 }
 
 a.btn.btn-secondary {
-  background: transparent;
+  /* background: transparent; */
+  position: relative;
   border: unset;
   font-family: futura;
   font-size: 15px;
@@ -256,8 +276,54 @@ a.btn.btn-secondary svg {
   margin-bottom: 4px;
 }
 
+.rotating-border-button {
+  border-radius: 40px !important;
+  background: linear-gradient(90deg, white 0%, rgba(0, 0, 0, 1) 100%);
+  animation: animatedgradient 3s ease alternate infinite;
+  background-size: 300% 300%;
+  --borderWidth: 1px;
+  z-index: 9;	
+  transition: 0.6s !important;
+  box-shadow: 0px 0px 35px -2px transparent;
+}
+
+@keyframes animatedgradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.rotating-border-button:hover {
+  box-shadow: 0px 0px 35px -2px var(--primary-color) !important;
+}	
+
+.rotating-border-button:before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: calc(100% - 2px);
+  width: calc(100% - 2px);
+  background: var(--secondary-color);
+  border-radius: 50px;
+  z-index: -11;
+  animation: animatedgradient 3s ease alternate infinite;
+  background-size: 300% 300%;
+  transform: translate(-50%, -50%);
+}
+
 .hero-section .content .buttons {
   position: relative;
+}
+
+.hero-section .content .buttons a {
+  margin-right: 10px;
 }
 
 .hero-section .content .buttons:before {
@@ -476,6 +542,7 @@ h5.dot:before {
   position: absolute;
   flex-direction: column;
   margin-left: 60px;
+  z-index: 9;
 }
 
 .sub-service-list button {
@@ -735,6 +802,14 @@ h5.dot:before {
   background: var(--light-color);
   padding-top: 150px;
   padding-bottom: 150px;
+}
+
+.review-section .rotating-border-button {
+  background: linear-gradient(90deg, black 0%, rgba(0, 0, 0, 1) 100%);
+}
+
+.review-section .rotating-border-button:before {
+  background: white;
 }
 
 .review-section .content,
