--- a/style.css
+++ b/style.css
@@ -1169,10 +1169,11 @@ h5.dot:before {
 .faq-answer {
   display: none;
   padding: 10px;
-  background: #e9ecef;
   border-radius: 10px;
-  color: black;
+  color: white;
   padding-inline: 17px;
+  background: #00000059;
+  border: 1px solid var(--primary-color);
 }
 
 .faq-section {
